# classify-pictures-server-client

./: AlgoSettings.cpp  AlgoSettings.h  CLI.cpp  CLI.h  CMakeLists.txt  ClassifyData.cpp  ClassifyData.h  Command.cpp  Command.h  Data.cpp  Data.h  DefaultIO.cpp  DefaultIO.h  DisplayResults.cpp  DisplayResults.h  DownloadResults.cpp  DownloadResults.h  InputFile.cpp  InputFile.h  KnnClassification.cpp  KnnClassification.h  Makefile  README.md  SendClassifiedVectors.cpp  SendClassifiedVectors.h  Server.cpp  Server.h  SocketIO.cpp  SocketIO.h  StandareIO.cpp  StandareIO.h  Upload.cpp  Upload.h  client.cpp  main.cpp  run.cpp
ClientFolder/: Makefile  client.cpp
ass1/: Geometry.cpp  Geometry.h  Makefile  README.md  client.cpp
files/: Makefile  client.cpp  iris_Unclassified.csv
